完善一些 7788 的内容